--- a/index.html
+++ b/index.html
@@ -283,16 +283,12 @@
             return;
         }
 
-        if (cell.numberOfBombsAdjacent > 0) { // od tąd
-            cell.gameField.innerHTML = cell.numberOfBombsAdjacent.toString();
-            cell.gameField.style.color = colorNumberOfBombs(cell.numberOfBombsAdjacent);
-            cell.gameField.style.backgroundColor = "darkGray";
-            cell.isCellDiscovered = true;
+        if (cell.numberOfBombsAdjacent > 0) {
+            fillFieldWithBombsAdjacent(cell);
             return;
         }
         else {
-            cell.gameField.style.backgroundColor = "darkGray";
-            cell.isCellDiscovered = true; // do tąd, wydzielić do innej funkcji
+            fillEmptyField(cell);
         }
 
         for (var i = -1; i < 2; i++) {
@@ -308,6 +304,18 @@
 
     function isFieldEmpty(x, y) {
         return gameBoard.cells[x][y].isFlag || gameBoard.cells[x][y].isBomb;
+    }
+
+
+    function fillFieldWithBombsAdjacent(cell) {
+        cell.gameField.innerHTML = cell.numberOfBombsAdjacent.toString();
+        cell.gameField.style.color = colorNumberOfBombs(cell.numberOfBombsAdjacent);
+        cell.gameField.style.backgroundColor = "darkGray";
+        cell.isCellDiscovered = true;
+    }
+    function fillEmptyField(cell) {
+        cell.gameField.style.backgroundColor = "darkGray";
+        cell.isCellDiscovered = true;
     }
 </script>
 </body>
