--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <script>
     var gameBoard = {width: 0, height: 0, cells: null, numberOfFlaggedFields: 0};
     var game = {numberOfBombs: 0, isGameDone: false, isBoardGenerated: false, messageBox: null};
-    var colors = ["blue", "green", "red", "purple", "orange", "yellow", "brown", "pink"];
+    var colorsOfNumberOfBombsAdjacentToField = ["blue", "green", "red", "purple", "orange", "yellow", "brown", "pink"];
     startGame();
 
     function startGame() {
@@ -70,7 +70,7 @@
             isFlag: false,
             numberOfBombsAdjacent: 0,
             gameField: null,
-            isCellDiscovered: false,
+            isDiscovered: false,
             changeFieldToBomb: function () {
                 var bombImage = document.createElement("img");
                 bombImage.setAttribute("class", "sizeOfImage");
@@ -178,7 +178,7 @@
         if (cellToDiscover.isFlag) {
             return;
         }
-        if (cellToDiscover.isCellDiscovered) {
+        if (cellToDiscover.isDiscovered) {
             return;
         }
         if (cellToDiscover.isBomb) {
@@ -198,11 +198,11 @@
         cellToDiscover.gameField.innerText = cellToDiscover.numberOfBombsAdjacent;
         cellToDiscover.gameField.style.color = colorNumberOfBombs(cellToDiscover.numberOfBombsAdjacent);
         cellToDiscover.gameField.style.backgroundColor = "darkGray";
-        cellToDiscover.isCellDiscovered = true;
+        cellToDiscover.isDiscovered = true;
     }
 
     function setFlag(cellToSetFlag) {
-        if (cellToSetFlag.isCellDiscovered) {
+        if (cellToSetFlag.isDiscovered) {
             return;
         }
         if (cellToSetFlag.isFlag) {
@@ -260,7 +260,7 @@
         var numberOfUndiscoveredFields = 0;
         for (var i = 0; i < gameBoard.height; i++) {
             for (var j = 0; j < gameBoard.width; j++) {
-                if (!gameBoard.cells[i][j].isBomb && !gameBoard.cells[i][j].isCellDiscovered) {
+                if (!gameBoard.cells[i][j].isBomb && !gameBoard.cells[i][j].isDiscovered) {
                     numberOfUndiscoveredFields++;
                 }
             }
@@ -269,7 +269,7 @@
     }
 
     function colorNumberOfBombs(numberOfBombs) {
-        return colors[numberOfBombs - 1];
+        return colorsOfNumberOfBombsAdjacentToField[numberOfBombs - 1];
     }
 
     function floodFill(x, y) {
@@ -279,7 +279,7 @@
 
         var cell = gameBoard.cells[x][y];
 
-        if (cell.isCellDiscovered) {
+        if (cell.isDiscovered) {
             return;
         }
 
@@ -311,11 +311,11 @@
         cell.gameField.innerHTML = cell.numberOfBombsAdjacent.toString();
         cell.gameField.style.color = colorNumberOfBombs(cell.numberOfBombsAdjacent);
         cell.gameField.style.backgroundColor = "darkGray";
-        cell.isCellDiscovered = true;
+        cell.isDiscovered = true;
     }
     function fillEmptyField(cell) {
         cell.gameField.style.backgroundColor = "darkGray";
-        cell.isCellDiscovered = true;
+        cell.isDiscovered = true;
     }
 </script>
 </body>
