--- a/index.html
+++ b/index.html
@@ -277,11 +277,14 @@
         var numberOfPoints = 0;
         for (var i = 0; i < gameBoard.height; i++) {
             for (var j = 0; j < gameBoard.width; j++) {
-                if (gameBoard.cells[i][j].isBomb && gameBoard.cells[i][j].isFlag) {
-                    numberOfPoints++;
-                }
-                if (!gameBoard.cells[i][j].isBomb && gameBoard.cells[i][j].isFlag) {
-                    numberOfPoints--;
+                var cell = gameBoard.cells[i][j];
+                if (cell.isFlag) {
+                    if (cell.isBomb) {
+                        numberOfPoints++;
+                    }
+                    else {
+                        numberOfPoints--;
+                    }
                 }
             }
         }
