--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </label>
 
     <button style="display: inline-block" class="new-game-button" onclick="startGame()">Start new game</button>
+    <!-- TODO dodac listener click-->
 </div>
 
 <script>
@@ -226,7 +227,7 @@
     }
 
     function floodFill(x, y) {
-        if (isEmptyOrDiscovered(x, y)) {
+        if (isEmptyOrDiscovered(x, y)) {//TODO wyciagnac sprawdzanie pola, dac komorke cell jako argument funkcji
             return;
         }
         var cell = gameBoard.cells[x][y];
